[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bact-bessyii-bluesky"
version = "0.0.1"
description = "Dashboard for BESSY II analysis"
authors = [ "Waheedullah Sulaiman Khail", "Pierre Schnizer" ]
license = "GPL-3.0"
repository = "https://github.com/hz-b/bact-bessyii-bluesky.git"
documentation = "https://github.com/hz-b/bact-bessyii-bluesky"
homepage = "https://github.com/hz-b/bact-bessyii-bluesky"
keywords = []

[tool.poetry.dependencies]
python = ">=3.7"
bluesky = ">0"
